--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,15 @@
   color: #61dafb;
 }
 
+.calendar {
+  width: 30%;
+  margin: auto;
+}
+
+h1 {
+  text-align: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
